# pnuemonia-classification-rs

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: rust.yml
notebooks/: test_classifier.ipynb  train_classifier.ipynb
src/: lib.rs  main.rs
