[package]
name = "pnuemonia-classification-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-config = "0.54.1"
aws-sdk-s3 = "0.24.0"
aws-sdk-sagemaker = "0.24.0"
tch = "0.10.3"
tokio = { version = "1.25.0", features = ["macros", "rt-multi-thread"] }
